package com.patterns.decorator;

public interface Processor {
    public Response execute(Request request);
} 
