@startuml
class client
interface Processor {
     public Response execute(Request request);
}
class Request {
    String userId;
    String password;
    long sourceAccountId;
    long destinationAccountId;
    double transferAmount;
}

class AuthenticationProcessor
class FundTransferProcessor

class Account {
    long accountId;
    double balance;
}
class User {
    String userId;
    String password;
}
class Response {
    boolean transferStatus;
    long sourceAccountId;
    long destinationAccountId
}
client -- Processor
Processor -- Request
AuthenticationProcessor -- FundTransferProcessor

AuthenticationProcessor -- User
FundTransferProcessor -- Account

Processor <|-- FundTransferProcessor
Processor <|-- AuthenticationProcessor
Processor -- Response

@enduml